updating week 1 template

--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>PS70: Intro to Digital Fabrication </title>
+<title>Phys S-12: Intro to Digital Fabrication </title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="../style.css" rel="stylesheet">
 
@@ -9,7 +9,7 @@
 <nav class="navbar navbar-expand-sm navbar-dark" style=" color: #EEE7E8;">
   <div style="align-items: center; justify-content: center;" class="container-fluid">
     <div class="flexrow">
-      <h2 class="nav-title">PS70 Fall 2024</h2>
+      <h2 class="nav-title">Phys S-12 Summer 2025</h2>
     </div>
     <div class="navbar-nav">
       <h4><a class="nav-link" href="../index.html">Home</a></h4>
@@ -20,36 +20,49 @@
 
 <body>
 <xmp style="display:none;">
-<div class="textcontainer">
-<br></br>
+<div class="container">
+  <br></br>
 
-<h3>Week 1: Final Project Proposal</h3>
+  <h3>Week 1: Final Project Proposal(s)</h3>
 
-<p class = "margin"></p>
-Here are at most 3 ideas for my final project
-<p class = "margin"></p>
+  <p class = "margin">
+    Two ideas for a final project, ranked by how excited I am about them. 
+  </p>
+  
+  <p class = "margin"></p>
 
-<h4>Idea 1 : Drawing automaton</h4>
-<p class = "margin"></p>
+  <h4>Idea 1: Drawing automaton</h4>
+  <p class = "margin">
+    I'd love to make a drawing automaton. The ones I've been looking at tend to use cams to draw or write, but because of the requirements for the final project, I'd be interested in trying to make one that would be somehow programmable using a computer rather than cams. 
+  </p>
+  <div class="row">
+    <div class="col-md-4">
+      <iframe class="yt-vid" src="https://www.youtube-nocookie.com/embed/7ZiH7oF3OMM?si=gqQ2irdJZEgoqcOS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+    <div class="col-md-4">
+      <iframe class="yt-vid" src="https://www.youtube-nocookie.com/embed/IeTOqDb-86s?si=H0X7oRqRlYPrXq5F&amp;start=40" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+    <div class="col-md-4">
+      <iframe class="yt-vid" src="https://www.youtube-nocookie.com/embed/FQM9JzHbCdw?si=qp1XXILfXFT0IPli" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+  </div>
 
-Idea 1 description
+  <p class = "margin"></p>
 
-<p class = "margin"></p>
+  <h4>Idea 2: Automated cat toy</h4>
+  <p class = "margin">
+    My concept is a sort of arm or hand that could clamp onto our cat's favorite toy and move it back and forth. He's a pretty large cat, so it would have to be able to withstand a decent amount of force. Ideally, he would be able to activate it on his own (maybe by stepping on a button?).
+  </p>
+  <div class="row">
+    <div class="col-md-6">
+      <img width="100%" src="cat.jpg">
+    </div>
+    <div class="col-md-6">
+      <img width="100%" src="toy-idea.jpg">
+    </div>
+  </div>
 
-
-<h4>Idea 2: arm that plays with my cat for me</h4>
-<p class = "margin"></p>
-
-Idea 2 Description
-
-<p class = "margin"></p>
-
-<h4>Idea 3: ???</h4>
-<p class = "margin"></p>
-
-Idea 3 Description
-
-
+  <p class = "margin"></p>
 
 </div>
 </xmp>
