styling the navbar

--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -6,10 +6,10 @@
 <link href="../style.css" rel="stylesheet">
 
 
-<nav class="navbar navbar-expand-sm navbar-dark" style=" color: #EEE7E8;">
+<nav class="navbar navbar-expand-sm navbar-dark">
   <div style="align-items: center; justify-content: center;" class="container-fluid">
     <div class="flexrow">
-      <h2 class="nav-title">Phys S-12 Summer 2025</h2>
+      <h2 class="nav-title">Week 1: Final Project Proposal(s)</h2>
     </div>
     <div class="navbar-nav">
       <h4><a class="nav-link" href="../index.html">Home</a></h4>
@@ -21,13 +21,6 @@
 <body>
 <xmp style="display:none;">
 <div class="container">
-  <br></br>
-
-  <h3>Week 1: Final Project Proposal(s)</h3>
-
-  <p class = "margin">
-    Two ideas for a final project, ranked by how excited I am about them. 
-  </p>
   
   <p class = "margin"></p>
 
