--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <nav class="navbar navbar-expand-sm navbar-dark" style=" color: #EEE7E8;">
   <div style="align-items: center; justify-content: center;" class="container-fluid">
     <div class="flexrow">
-      <h2 class="nav-title">PS70 Fall 2024</h2>
+      <h2 class="nav-title">About Me</h2>
     </div>
     <div class="navbar-nav">
       <h4><a class="nav-link" href="./index.html">Home</a></h4>
@@ -20,34 +20,19 @@
 
 <body>
 <xmp style="display:none;">
-<div class="textcontainer">
-
-
-
-<h3>About Me</h3>
-
-<p class="margin">   </p>
-<div class="center-row">
-  <img src="./about-me-placeholder.jpg" alt="placeholder for you about me image">
-  <p id="aboutme">
-    This is an about me! Here you can talking about the dorm you live in, what year you are, and what are you interested in.
-  </p>
+<div class="container">
+<br>
+<div class="row">
+  <div class="col">
+    <img width="100%" src="img/about-me.jpg" alt="photo of emma in front of a beautiful syncline" id="about-me-img">
+  </div>
+  <div class="col">
+    <p id="aboutme">
+    Hi, I'm Emma! I'm originally from DC, now living in Somerville, MA. In my free time I enjoy watching bad movies, eating $1 oysters, and searching for the best fried pickles in Greater Boston. 
+    </p>
+  </div>
+  
 </div>
-<br></br>
-
-Hello there is more text here, feel free to go into more detail about stuff you are interested in as well. As well as place more
-images if you are interested in those things
-<br></br>
-<img src="./generic-placeholder-image.jpg" alt="generic placeholder image">
-
-<br></br>
-Maybe even add a video?
-<br></br>
-
-<video width="640" height="480" controls>
-  <source src="temp-video.mp4" type="video/mp4">
-</video>
-
 
 </div>
 </xmp>
