--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -21,28 +21,60 @@
 <body>
 <xmp style="display:none;">
 <div class="container">
-  
+
   <p class = "margin"></p>
 
-  <h4>Idea 1: Drawing automaton</h4>
-  <p class = "margin">
-    I'd love to make a drawing automaton. The ones I've been looking at tend to use cams to draw or write, but because of the requirements for the final project, I'd be interested in trying to make one that would be somehow programmable using a computer rather than cams. 
-  </p>
-  <div class="row">
-    <div class="col-md-4">
-      <iframe class="yt-vid" src="https://www.youtube-nocookie.com/embed/7ZiH7oF3OMM?si=gqQ2irdJZEgoqcOS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div>
-    <div class="col-md-4">
-      <iframe class="yt-vid" src="https://www.youtube-nocookie.com/embed/IeTOqDb-86s?si=H0X7oRqRlYPrXq5F&amp;start=40" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div>
-    <div class="col-md-4">
-      <iframe class="yt-vid" src="https://www.youtube-nocookie.com/embed/FQM9JzHbCdw?si=qp1XXILfXFT0IPli" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <input type="radio" class="btn-check idea-select" name="options" id="automaton" value="automaton" autocomplete="off" onclick="changeIdea()" checked>
+  <label class="btn btn-outline-primary" for="automaton">Idea 1: Drawing automaton</label>
+        
+  <input type="radio" class="btn-check idea-select" name="options" id="cat-toy" value="cat-toy" autocomplete="off" onclick="changeIdea()">
+  <label class="btn btn-outline-primary" for="cat-toy">Idea 2: Automated cat toy</label>
+
+  <div id="project-idea">
+    <h4>Idea 1: Drawing automaton</h4>
+    <p class = "margin">
+      I'd love to make a drawing automaton. The ones I've been looking at tend to use cams to draw or write, but because of the requirements for the final project, I'd be interested in trying to make one that would be somehow programmable using a computer rather than cams. 
+    </p>
+    <div class="row">
+      <div class="col-md-4">
+        <iframe class="yt-vid" src="https://www.youtube-nocookie.com/embed/7ZiH7oF3OMM?si=gqQ2irdJZEgoqcOS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
+      <div class="col-md-4">
+        <iframe class="yt-vid" src="https://www.youtube-nocookie.com/embed/IeTOqDb-86s?si=H0X7oRqRlYPrXq5F&amp;start=40" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
+      <div class="col-md-4">
+        <iframe class="yt-vid" src="https://www.youtube-nocookie.com/embed/FQM9JzHbCdw?si=qp1XXILfXFT0IPli" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
     </div>
   </div>
 
-  <p class = "margin"></p>
+</div>
+</xmp>
+</body>
 
-  <h4>Idea 2: Automated cat toy</h4>
+<script>
+  function changeIdea() {
+    let selectedButton = [...document.querySelectorAll('.idea-select:checked')].map((d) => d.id)[0];
+    let selectIdea = document.getElementById("project-idea");
+    if (selectedButton === "automaton") {
+      selectIdea.innerHTML = `<h4>Idea 1: Drawing automaton</h4>
+    <p class = "margin">
+      I'd love to make a drawing automaton. The ones I've been looking at tend to use cams to draw or write, but because of the requirements for the final project, I'd be interested in trying to make one that would be somehow programmable using a computer rather than cams. 
+    </p>
+    <div class="row">
+      <div class="col-md-4">
+        <iframe class="yt-vid" src="https://www.youtube-nocookie.com/embed/7ZiH7oF3OMM?si=gqQ2irdJZEgoqcOS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
+      <div class="col-md-4">
+        <iframe class="yt-vid" src="https://www.youtube-nocookie.com/embed/IeTOqDb-86s?si=H0X7oRqRlYPrXq5F&amp;start=40" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
+      <div class="col-md-4">
+        <iframe class="yt-vid" src="https://www.youtube-nocookie.com/embed/FQM9JzHbCdw?si=qp1XXILfXFT0IPli" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
+    </div>`;
+    }
+    else {
+      selectIdea.innerHTML = `<h4>Idea 2: Automated cat toy</h4>
   <p class = "margin">
     My concept is a sort of arm or hand that could clamp onto our cat's favorite toy and move it back and forth. He's a pretty large cat, so it would have to be able to withstand a decent amount of force. Ideally, he would be able to activate it on his own (maybe by stepping on a button?).
   </p>
@@ -53,14 +85,10 @@
     <div class="col-md-6">
       <img width="100%" src="toy-idea.jpg">
     </div>
-  </div>
-
-  <p class = "margin"></p>
-
-</div>
-</xmp>
-</body>
-
+  </div>`;
+    }
+  }
+</script>
 <script src="../strapdown.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" ></script>
 
