turn-in for 6/26

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 <link href="./style.css" rel="stylesheet">
 
 
-<nav class="navbar navbar-expand-sm navbar-dark" style=" color: #EEE7E8;">
+<nav class="navbar navbar-expand-sm navbar-light">
   <div style="align-items: center; justify-content: center;" class="container-fluid">
     <div class="flexrow">
       <h2 class="nav-title">About Me</h2>
@@ -24,11 +24,11 @@
 <br>
 <div class="row">
   <div class="col">
-    <img width="100%" src="img/about-me.jpg" alt="photo of emma in front of a beautiful syncline" id="about-me-img">
+    <img width="100%" src="img/about-me.jpg" alt="emma in front of a beautiful syncline" id="about-me-img">
   </div>
   <div class="col">
     <p id="aboutme">
-    Hi, I'm Emma! I'm originally from DC, now living in Somerville, MA. In my free time I enjoy watching bad movies, eating $1 oysters, and searching for the best fried pickles in Greater Boston. 
+    Hi, I'm Emma! I study Earth & Planetary Sciences. I'm originally from DC, now living in Somerville, MA. In my free time I enjoy watching bad movies, eating $1 oysters, and searching for the best fried pickles in Greater Boston. 
     </p>
   </div>
   
