--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="./style.css" rel="stylesheet">
 
-<nav class="navbar navbar-expand-sm navbar-dark">
+<nav class="navbar navbar-expand-sm navbar-light">
   <div style="align-items: center; justify-content: center;" class="container-fluid">
     <div class="flexrow">
       <h2 class="nav-title">Phys S-12 Summer 2025</h2>
@@ -13,7 +13,7 @@
     <div class="navbar-nav">
       <h4><a class="nav-link" href="./index.html">Home</a></h4>
       <h4><a class="nav-link" href="./about.html">About</a></h4>
-      <h4><a class="nav-link" href="./13_finalproject/index.html">Final Project</a></h4>
+      <!-- <h4><a class="nav-link" href="./13_finalproject/index.html">Final Project</a></h4> -->
     </div>
   </div>
 </nav>
