--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -24,13 +24,15 @@
 
   <p class = "margin"></p>
 
-  <input type="radio" class="btn-check idea-select" name="options" id="automaton" value="automaton" autocomplete="off" onclick="changeIdea()" checked>
+  <input type="radio" class="btn-check idea-select" name="options" id="automaton" value="automaton" autocomplete="off" checked>
   <label class="btn btn-outline-primary" for="automaton">Idea 1: Drawing automaton</label>
         
-  <input type="radio" class="btn-check idea-select" name="options" id="cat-toy" value="cat-toy" autocomplete="off" onclick="changeIdea()">
+  <input type="radio" class="btn-check idea-select" name="options" id="cat-toy" value="cat-toy" autocomplete="off">
   <label class="btn btn-outline-primary" for="cat-toy">Idea 2: Automated cat toy</label>
 
   <div id="project-idea">
+    
+    <div id="option-1">
     <p class = "margin">
       I think the combination of sort-of-weird doll parts and machinery would make a drawing automaton fun to build. The old ones I've seen use cams to store data, 
       but because of the requirements for the final project, I'd be interested in trying to make one that would be programmable using a computer rather than cams. Ideally, I'd like 
@@ -48,6 +50,24 @@
         <iframe class="yt-vid" src="https://www.youtube-nocookie.com/embed/FQM9JzHbCdw?si=qp1XXILfXFT0IPli" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
     </div>
+    </div>
+    <div id="option-2" style="display: none;">
+      <p class = "margin">
+        My second idea is a sort of arm that could be attached to our cat's favorite toy (which looks like a fishing rod) and
+        move it vertically and horizontally in a variety of patterns. He's a somewhat large cat (17 lbs), so it would have to be able
+        to withstand a decent amount of pulling in addition to not pulling too hard on the toy itself. Ideally, the cat would be able to 
+        activate it on his own (maybe by stepping on a button?). 
+      </p>
+      <div class="row">
+        <div class="col-md-6 d-flex justify-content-center">
+          <img width="80%" src="cat.jpg">
+        </div>
+        <div class="col-md-6 d-flex justify-content-center">
+          <img width="80%" src="toy-idea.jpg">
+        </div>
+      </div>
+    </div>
+
   </div>
 
 </div>
