--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
   </div>
   <div class="col">
     <p id="aboutme">
-    Hi, I'm Emma! I study Earth & Planetary Sciences. I'm originally from DC, now living in Somerville, MA. In my free time I enjoy watching bad movies, eating $1 oysters, and searching for the best fried pickles in Greater Boston. 
+    Hi, I'm Emma! I study Earth & Planetary Sciences. I'm originally from DC, now living in Somerville, MA. In my free time, I enjoy watching bad movies, eating $1 oysters, and searching for the best fried pickles in Greater Boston. 
     </p>
   </div>
   
