basic week 2 info done

--- a/02_2Ddesign/index.html
+++ b/02_2Ddesign/index.html
@@ -9,7 +9,7 @@
 <nav class="navbar navbar-expand-sm navbar-dark" style=" color: #EEE7E8;">
   <div style="align-items: center; justify-content: center;" class="container-fluid">
     <div class="flexrow">
-      <h2 class="nav-title">PS70 Fall 2024</h2>
+      <h2 class="nav-title">Phys S-12 Summer 2025</h2>
     </div>
     <div class="navbar-nav">
       <h4><a class="nav-link" href="../index.html">Home</a></h4>
@@ -20,26 +20,113 @@
 
 <body>
 <xmp style="display:none;">
-<div class="textcontainer">
+<div class="container">
 <p class="margin">   </p>
 
 <h3>Week 2: 2D Design & Cutting</h3>
 
 <p class="margin">   </p>
-<div class="flexrow">
-  <a id="btn" href="./temp.zip" download>Test Download Button
-  </a>
+
+<div class="row">
+  <div class="col">
+    <h4>Cardboard Box <a href="./EK_fingerbox.dxf" download>(download dxf)</a></h4>
+    <p>For the finger-jointed box, I added some holes for handles and my initials to the basic tutorial design 
+    (initials were scored instead of engraved because I didn't want to wait forever). I'd never used a laser 
+    cutter before, so I wanted to do something simple to start with. After struggling with Rhino for too long 
+    (I could not figure out how to rotate my box sketch correctly), I got my box cut. Unfortunately, I had no 
+    idea what to set the kerf parameter to, and the value I randomly picked based on cursory googling (0.3 mm) 
+    was definitely too large because the fit is too snug for the cardboard to slot together happily. </p>
+  </div>
 </div>
-<p class="margin">   </p>
+<div class="row">
+  <div class="col">
+    <img width="100%" src="img/fingerbox-v1-1.jpg">
+  </div>
+  <div class="col">
+    <img width="100%" src="img/fingerbox-v1-2.jpg">
+  </div>
+</div>
+<div class="row">
+  <div class="col">
+    <p>Because of the tight fit, the bottom fingers hold really nicely, but the tops ones required too much effort to
+    get in place. I ended up smooshing them while trying to slot them together, so now they're too floppy to be 
+    functional. If I decide to try cutting it again, I'll slightly reduce the kerf.</p>
+  </div>
+</div>
 
-<h4>Assignment 1: Make a Box</h4>
-
-
-
-<h4>Assignment 2: Fusion 360 Tutorial</h4>
-
-
-<h4>Assignment 3: Fusion Modeling</h4>
+<br>
+<div class="row">
+  <div class="col">
+    <h4>Fusion 360 Tutorial <a href="./week-2-tutorials.zip" download>(download zip of f3ds)</a></h4>
+    <p>
+      For this part of the assignment, I did the first few <a href="https://www.youtube.com/watch?v=d3qGQ2utl2A&t=38s">"Fusion 360 in 30 Days for Complete Beginners"</a> videos 
+      linked from the class site. Key points from the videos were 1) canvas: trace an image, 2) sweep tool: makes solid 
+      from 2d profile that follows a sketch path, 3) loft: connects sketch profiles in order of connection and uses guide
+      rails to add more specificity. Here're some pics of models from the tutorials:
+    </p>
+  </div>
+</div>
+<div class="row">
+  <div class="col">
+    <img width="100%" src="img/tutorial-block.png">
+  </div>
+  <div class="col">
+    <img width="100%" src="img/tutorial-loftbottle.png">
+  </div>
+  <div class="col">
+    <img width="100%" src="img/tutorial-paperclip.png">
+  </div>
+  <div class="col">
+    <img width="100%" src="img/tutorial-soda.png">
+  </div>
+</div>
+<br>
+<div class="row">
+  <div class="col">
+    <h4>Modeling Household Objects in Fusion <a href="./cat toy v3.f3d" download>(download zip of f3ds)</a></h4>
+    <p>
+      The first object I chose is my cat's favorite toy. It seemed like a good starting point because I was 
+      considering using it in a final project idea and because it's mostly cylindrical forms. It's built using 
+      extrude for the handle, loft for the tapering middle part, the torus tool for a little rubber ring by the handle, 
+      and revolve for the metal piece at the tip. My biggest takeaway was to set parameters at the beginning
+      so I wouldn't have to keep referencing my bad notes for measurements. 
+    </p>
+  </div>
+</div>
+<div class="row" style="padding-bottom: 4vh;">
+  <div class="col">
+    <img width="100%" src="img/cat-toy-1.png">
+  </div>
+  <div class="col">
+    <img width="100%" src="img/cat-toy-2.png">
+  </div>
+  <div class="col">
+    <img width="100%" src="img/cat-toy-3.png">
+  </div>
+</div>
+<div class="row">
+  <div class="col">
+    <p>
+      For my object made from multiple components, I modeled a pair of kitchen scissors, following the first part of
+      <a href="https://www.youtube.com/watch?v=z078TEfmvJM">this tutorial</a>. I traced over a canvas of the blade 
+      and handle to get the basic shapes down, then extruded various faces to make the body. I used the plane along 
+      path tool to take a notch out of the metal for the blade and combine to take a chunk out of the plastic handle 
+      where the metal blade sits. This time I actually set up my parameters first, which ended up being very necessary
+      when I put the scissors together to discover they did not match up correctly and realized I'd forgotten to add 
+      one measurement to the height of an extrusion. I also learned the importance of selecting paste new if I'm 
+      planning to make edits to a copy of a component. I followed <a href="https://www.youtube.com/watch?v=1fw6kvTei1M">this tutorial</a>
+      for the screw and nut holding the scissors together.
+    </p>
+  </div>
+</div>
+<div class="row">
+  <div class="col">
+    <img width="100%" src="img/scissors-cut.gif">
+  </div>
+  <div class="col">
+    <img width="100%" src="img/scissors-screw.gif">
+  </div>
+</div>
 
 
 
