--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <br>[Week 1: Project Proposals](./01_intro/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./02_2Ddesign/week2-placeholder-image.jpg" alt = "week 2 placeholder"> </image>
+      <a href="./02_2Ddesign/index.html"><image style = "width: 75%"src = "./02_2Ddesign/img/fingerbox-v1-1.jpg" alt = "week 2 placeholder"> </image></a>
       <br>[Week 2: 2D Design](./02_2Ddesign/index.html)
     </div>
     <div class="col-sm-4">
