added missing file

--- a/02_2Ddesign/index.html
+++ b/02_2Ddesign/index.html
@@ -84,7 +84,7 @@
 <br>
 <div class="row">
   <div class="col">
-    <h4>Modeling Household Objects in Fusion <a href="./cat toy v3.f3d" download>(download f3d zip)</a></h4>
+    <h4>Modeling Household Objects in Fusion <a href="./week-2-fusion.zip" download>(download f3d zip)</a></h4>
     <p>
       The first object I chose is my cat's favorite toy. It seemed like a good starting point because I was 
       considering using it in a final project idea and because it's mostly cylindrical forms. It's built using 
