--- a/02_2Ddesign/index.html
+++ b/02_2Ddesign/index.html
@@ -90,7 +90,7 @@
       considering using it in a final project idea and because it's mostly cylindrical forms. It's built using 
       extrude for the handle, loft for the tapering middle part, the torus tool for a little rubber ring by the handle, 
       and revolve for the metal piece at the tip. My biggest takeaway was to set parameters at the beginning
-      so I wouldn't have to keep referencing my bad notes for measurements. 
+      so I wouldn't have to keep referencing my inadequate notes for measurements. 
     </p>
   </div>
 </div>
@@ -112,10 +112,10 @@
        the blade and handle to get the basic shapes down, then extruded various faces to make the body. When I couldn't 
       figure out how to make the blade, I found <a href="https://www.youtube.com/watch?v=z078TEfmvJM">this video</a>,
       which taught me about the plane along path tool. This time I actually set up my parameters first, which ended up being very necessary
-      when I put the scissors together to discover they did not match up correctly and realized I'd forgotten to add 
+      when I put the scissors together only to discover they did not match up correctly and realized I'd forgotten to add 
       one measurement to the height of an extrusion. I also learned the importance of selecting paste new if I'm 
       planning to make edits to a copy of a component. I followed <a href="https://www.youtube.com/watch?v=1fw6kvTei1M">this tutorial</a>
-      for the screw and nut holding the scissors together.
+      to add an as-built joint for the screw and nut holding the scissors together.
     </p>
   </div>
 </div>
