--- a/03_fabrication/index.html
+++ b/03_fabrication/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>PS70: Intro to Digital Fabrication </title>
+<title>Phys S-12: Intro to Digital Fabrication </title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="../style.css" rel="stylesheet">
 
 
-<nav class="navbar navbar-expand-sm navbar-dark" style="color: #EEE7E8;">
+<nav class="navbar navbar-expand-sm navbar-dark" style=" color: #EEE7E8;">
   <div style="align-items: center; justify-content: center;" class="container-fluid">
     <div class="flexrow">
-      <h2 class="nav-title">PS70 Fall 2024</h2>
+      <h2 class="nav-title">Phys S-12 Summer 2025</h2>
     </div>
     <div class="navbar-nav">
       <h4><a class="nav-link" href="../index.html">Home</a></h4>
@@ -20,12 +20,96 @@
 
 <body>
 <xmp style="display:none;">
-<div class="textcontainer">
+<div class="container">
 <p class="margin">   </p>
 
-<h3>Week 3: Hand Tools and Fabrication</h3>
+<h3>Week 3: Electronics and Tools</h3>
 
-<h4>Kinetic Sculpture</h4>
+<p class="margin">   </p>
+
+<div class="row">
+  <div class="col">
+    <h4>Kinetic Sculpture <a href="./kinetic_sculpture.f3d" download>(download project)</a></h4>
+    <p>I initially wanted to do something inspired by a glockenspiel clock but quickly realized that would be too complicated
+    given the timeframe. Following a lot of simplification, that idea turned into a flower that opens and closes. After brainstorming
+    a couple ways I could do that, I decided the easiest way to have it open and close would be to push it up and down
+    into and out of a cup that would fold the petals in. I googled ways to make rotational movement into linear motion 
+    and settled on the <a href="https://en.wikipedia.org/wiki/Scotch_yoke">Scotch yoke</a>. The info I could find on the
+    DC motor said it would run at 120 rpm at 3V, and I wanted it at more like 12 rpm, so I used gears to slow down the 
+    speed at which the flower would go up and down. I had trouble picturing how it would fit together, so I first made a model 
+    in Fusion to get the gist of it. Here's my initial idea roughly in cardboard and my model for how the
+    mechanism would work:
+
+  </div>
+</div>
+<div class="row">
+  <div class="col d-flex justify-content-center">
+    <img width="60%" src="img/flower_idea.gif">
+  </div>
+  <div class="col d-flex justify-content-center">
+    <img width="85%" src="img/gears_model.gif">
+  </div>
+</div>
+
+<br>
+
+<div class="row">
+  <div class="col">
+    I laser cut the needed pieces out of carboard and 3mm ply and assembled my first draft. The general idea seemed to be OK,
+    but due to time constraints I hadn't gotten a chance to cut the pieces to hold the gears in place, so I couldn't be sure
+    sure the mechanism would actually work when I wasn't holding it together by hand. And even worse, the "flower" looked
+    like a horrible crinoid, so that definitely needed a revision.
+  </div>
+</div>
+
+<div class="row">
+  <div class="col d-flex justify-content-center">
+    <img width="40%" src="img/flower_draft_1.gif">
+  </div>
+  <div class="col d-flex justify-content-center">
+    <img width="65%" src="img/crinoid.jpg">
+  </div>
+</div>
+
+<br>
+
+<div class="row">
+  <div class="col">
+    I unfortunately did not get a chance to cut the rest of the pieces I needed to revise the flower, but I did get a chance to 
+    cut (some) of the pieces to hold my gears. I used a dowel to conenct the gears and managed to assemble most of the moving parts
+    of my flower. 
+  </div>
+</div>
+
+<div class="row">
+  <div class="col d-flex justify-content-center">
+    <img width="40%" src="img/working-gears.gif">
+  </div>
+</div>
+
+<div class="row">
+  <div class="col">
+    The vertical part moves at about the speed I had hoped for, and, despite missing some pieces,
+    does in fact move more or less correctly. However, approximately ten minutes after I took this video, 
+    all the dowels (which had been press-fit or glued in place) decided to become unstuck from their gears, 
+    and it fell apart. It did not want to glue back together with hot glue, so tomorrow I'm hoping to reattach it with 
+    something stronger. 
+  </div>
+</div>
+<br>
+<div class="row">
+  <div class="col">
+    My takeaway from this week is the importance of having a plan for how gears and other moving parts will be physically
+    held in place. I regret using round holes in the gears, which lets them twist out of their glue very easily. I also discovered 
+    how helpful including guide marks on the laser cut pieces can be—by adding cutouts to align the different parts of the base,
+    it became much easier to figure out where all the pieces should go relative to each other. 
+  </div>
+</div>
+
+
+
+
+
 
 
 
