--- a/03_fabrication/index.html
+++ b/03_fabrication/index.html
@@ -105,6 +105,12 @@
     it became much easier to figure out where all the pieces should go relative to each other. 
   </div>
 </div>
+<div class="row">
+  <div class="col">
+    I measured the voltage across my circuit as 3.26V, which makes sense because the microcontroller says it supplies 3.3V. It reads 
+    the resistance as 419 Ohms, so the current would be 3.26 V / 419 Ohms = 0.007780429594 A = 7.78 mA
+  </div>
+</div>
 
 
 
