--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
   <div class="row">
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./04_microcontroller/week4-placeholder-image.jpg" alt = "week 4 placeholder"> </image> 
+      <image style = "width: 75%" src = "04_microcontroller/img/sculpture_breadboardO_small.jpg" alt = "week 4 placeholder"> </image> 
       <br>[Week 4: Programming](./04_microcontroller/index.html)
     </div>
     <div class="col-sm-4">
